--- a/config/vrnn.yaml
+++ b/config/vrnn.yaml
@@ -9,6 +9,7 @@ drop_prob: 0.5
 bidirectional_encoder: true
 gumbel_softmax_tmp: 0.8
 teacher_forcing_prob: 0.5
+with_bow_loss: true
 # layer sizes
 input_encoder_hidden_size: 150
 decoder_hidden_size: 300
@@ -23,3 +24,4 @@ prior_ff_sizes:
   - 100
   - 100
 z_logits_dim: 15
+bow_layer_size: 400
