added visualization script

--- a/config/vrnn.yaml
+++ b/config/vrnn.yaml
@@ -1,7 +1,9 @@
 # data settings
 data_type: 'raw'
-data_fn: 'VRNN/data/CamRest676.json'
-domain: 'camrest'
+#data_fn: 'VRNN/data/CamRest676.json'
+#domain: 'camrest'
+data_fn: 'VRNN/data/woz-data.json'
+domain: 'woz-hotel'
 embedding_fn: 'VRNN/data/embeddings/fasttext-wiki.pkl'
 # general settings
 batch_size: 16
