--- a/config/vrnn.yaml
+++ b/config/vrnn.yaml
@@ -1,9 +1,9 @@
 # data settings
 data_type: 'raw'
-#data_fn: 'VRNN/data/CamRest676.json'
-#domain: 'camrest'
-data_fn: 'VRNN/data/woz-data.json'
-domain: 'woz-hotel'
+data_fn: 'VRNN/data/CamRest676.json'
+domain: 'camrest'
+#data_fn: 'VRNN/data/woz-data.json'
+#domain: 'woz-hotel'
 embedding_fn: 'VRNN/data/embeddings/fasttext-wiki.pkl'
 # general settings
 batch_size: 16
@@ -11,7 +11,10 @@ drop_prob: 0.5
 bidirectional_encoder: true
 gumbel_softmax_tmp: 0.8
 teacher_forcing_prob: 0.5
-with_bow_loss: false
+with_bow_loss: true
+k_loss_coeff: 0.1
+alpha_coeff_step: 0.5
+default_lambda_loss: 1.0
 # layer sizes
 input_encoder_hidden_size: 150
 decoder_hidden_size: 300
