--- a/config/vrnn.yaml
+++ b/config/vrnn.yaml
@@ -11,7 +11,8 @@ drop_prob: 0.5
 bidirectional_encoder: true
 gumbel_softmax_tmp: 0.8
 teacher_forcing_prob: 0.5
-with_bow_loss: true
+number_z_vectors: 2
+with_bow_loss: false
 k_loss_coeff: 0.1
 alpha_coeff_step: 0.5
 default_lambda_loss: 1.0
