--- a/config/vrnn.yaml
+++ b/config/vrnn.yaml
@@ -11,11 +11,12 @@ drop_prob: 0.5
 bidirectional_encoder: true
 gumbel_softmax_tmp: 0.8
 teacher_forcing_prob: 0.5
-number_z_vectors: 2
+number_z_vectors: 1
 with_bow_loss: false
 k_loss_coeff: 0.1
 alpha_coeff_step: 0.5
 default_lambda_loss: 1.0
+z_type: 'cont' # cont| gumbel;
 # layer sizes
 input_encoder_hidden_size: 150
 decoder_hidden_size: 300
