--- a/config/vrnn.yaml
+++ b/config/vrnn.yaml
@@ -2,7 +2,7 @@
 data_type: 'raw'
 data_dir: 'VRNN/data/camrest'
 domain: 'camrest'
-#data_fn: 'VRNN/data/data.json'
+#data_dir: 'VRNN/data/woz-hotel'
 #domain: 'woz-hotel'
 embedding_fn: 'VRNN/data/embeddings/fasttext-wiki.pkl'
 # general settings
@@ -11,24 +11,24 @@ drop_prob: 0.5
 bidirectional_encoder: true
 gumbel_softmax_tmp: 0.8
 teacher_forcing_prob: 0.5
-number_z_vectors: 1
+number_z_vectors: 2
 with_bow_loss: false
 k_loss_coeff: 0.1
 alpha_coeff_step: 0.5
 default_lambda_loss: 1.0
-z_type: 'cont' # cont| gumbel;
+z_type: 'gumbel' # cont| gumbel;
 # layer sizes
 input_encoder_hidden_size: 150
 decoder_hidden_size: 300
 vrnn_hidden_size: 200
 posterior_ff_sizes1:
-  - 200
+  - 300
 #  - 200
 posterior_ff_sizes2:
 #  - 200
-  - 200
+  - 250
 prior_ff_sizes:
   - 100
   - 100
-z_logits_dim: 150
+z_logits_dim: 20
 bow_layer_size: 400
