--- a/config/vrnn.yaml
+++ b/config/vrnn.yaml
@@ -16,7 +16,8 @@ with_bow_loss: false
 k_loss_coeff: 0.1
 alpha_coeff_step: 0.5
 default_lambda_loss: 1.0
-z_type: 'cont' # cont| gumbel;
+with_BPR: false
+z_type: 'gumbel' # cont| gumbel;
 # layer sizes
 input_encoder_hidden_size: 150
 decoder_hidden_size: 300
@@ -30,5 +31,5 @@ posterior_ff_sizes2:
 prior_ff_sizes:
   - 100
   - 100
-z_logits_dim: 200
+z_logits_dim: 20
 bow_layer_size: 400
