--- a/config/vrnn.yaml
+++ b/config/vrnn.yaml
@@ -1,10 +1,10 @@
 # data settings
 data_type: 'raw'
-data_dir: 'VRNN/data/camrest'
-domain: 'camrest'
-#data_dir: 'VRNN/data/woz-hotel'
-#domain: 'woz-hotel'
-embedding_fn: 'VRNN/data/embeddings/fasttext-wiki.pkl'
+#data_dir: 'VRNN/data/camrest'
+#domain: 'camrest'
+data_dir: 'VRNN/data/woz-hotel'
+domain: 'woz-hotel'
+embedding_fn: 'VRNN/data/embeddings/fasttext-wiki.vec'
 # general settings
 batch_size: 8
 drop_prob: 0.5
