--- a/config/vrnn.yaml
+++ b/config/vrnn.yaml
@@ -1,17 +1,17 @@
 # data settings
 data_type: 'raw'
-#data_dir: 'VRNN/data/camrest'
-#domain: 'camrest'
-data_dir: 'VRNN/data/woz-hotel'
-domain: 'woz-hotel'
-embedding_fn: 'VRNN/data/embeddings/fasttext-wiki.vec'
+data_dir: 'VRNN/data/camrest'
+domain: 'camrest'
+#data_dir: 'VRNN/data/woz-hotel'
+#domain: 'woz-hotel'
+embedding_fn: 'VRNN/data/embeddings/fasttext-wiki.pkl'
 # general settings
 batch_size: 8
 drop_prob: 0.5
 bidirectional_encoder: true
 gumbel_softmax_tmp: 5
 teacher_forcing_prob: 0.5
-number_z_vectors: 2
+number_z_vectors: 1
 with_bow_loss: false
 k_loss_coeff: 0.1
 alpha_coeff_step: 0.5
@@ -31,5 +31,5 @@ posterior_ff_sizes2:
 prior_ff_sizes:
   - 100
   - 100
-z_logits_dim: 40
+z_logits_dim: 100
 bow_layer_size: 400
