--- a/config/vrnn.yaml
+++ b/config/vrnn.yaml
@@ -11,7 +11,7 @@ drop_prob: 0.5
 bidirectional_encoder: true
 gumbel_softmax_tmp: 5
 teacher_forcing_prob: 0.5
-number_z_vectors: 1
+number_z_vectors: 3
 with_bow_loss: false
 k_loss_coeff: 0.1
 init_KL_term: 0.001
@@ -33,5 +33,6 @@ posterior_ff_sizes2:
 prior_ff_sizes:
   - 100
   - 100
-z_logits_dim: 100
+user_z_logits_dim: 150
+system_z_logits_dim: 20
 bow_layer_size: 400
