--- a/config/vrnn.yaml
+++ b/config/vrnn.yaml
@@ -7,23 +7,26 @@ domain: 'camrest'
 embedding_fn: 'VRNN/data/embeddings/fasttext-wiki.pkl'
 # general settings
 batch_size: 8
-drop_prob: 0.5
+drop_prob: 0.65
+lr_decay_rate: 0.96
 bidirectional_encoder: true
 gumbel_softmax_tmp: 5
 teacher_forcing_prob: 0.5
-number_z_vectors: 3
+number_z_vectors: 5
+with_bpr: false
 with_bow_loss: false
-k_loss_coeff: 0.1
+
+# KL before start increasing
 init_KL_term: 0.001
+# bow loss setting
+k_loss_coeff: 0.1
 alpha_coeff_step: 0.5
 default_lambda_loss: 1.0
-with_BPR: false
-user_z_type: 'cont' # cont| gumbel;
-system_z_type: 'gumbel'
 # layer sizes
 input_encoder_hidden_size: 150
-decoder_hidden_size: 300
-vrnn_hidden_size: 200
+user_decoder_hidden_size: 200
+system_decoder_hidden_size: 200
+vrnn_hidden_size: 150
 posterior_ff_sizes1:
   - 200
 #  - 200
@@ -31,8 +34,10 @@ posterior_ff_sizes2:
 #  - 200
   - 200
 prior_ff_sizes:
-  - 100
-  - 100
+  - 200
+bow_layer_size: 400
+# latent z config
+user_z_type: 'cont' # cont| gumbel;
+system_z_type: 'gumbel'
 user_z_logits_dim: 150
 system_z_logits_dim: 20
-bow_layer_size: 400
