simplified z_prior + activation function, configurable fake prior

--- a/config/vrnn.yaml
+++ b/config/vrnn.yaml
@@ -16,6 +16,9 @@ number_z_vectors: 3
 with_bpr: false
 with_bow_loss: false
 begin_kl_opt_epoch: 1
+fake_prior: true
+min_epochs: 50
+max_epochs: 100
 
 # KL before start increasing
 init_KL_term: 0.001
