--- a/config/vrnn.yaml
+++ b/config/vrnn.yaml
@@ -12,11 +12,11 @@ lr_decay_rate: 0.98
 bidirectional_encoder: true
 gumbel_softmax_tmp: 1.0
 teacher_forcing_prob: 0.5
-number_z_vectors: 1
+number_z_vectors: 3
 with_bpr: false
 with_bow_loss: false
 begin_kl_opt_epoch: 1
-fake_prior: false
+fake_prior: true
 min_epochs: 50
 max_epochs: 100
 
@@ -30,7 +30,7 @@ default_lambda_loss: 1.0
 input_encoder_hidden_size: 150
 user_decoder_hidden_size: 200
 system_decoder_hidden_size: 200
-vrnn_hidden_size: 150
+vrnn_hidden_size: 200
 posterior_ff_sizes1:
   - 200
 #  - 200
@@ -38,8 +38,8 @@ posterior_ff_sizes2:
 #  - 200
   - 200
 prior_ff_sizes:
-  - 200
-  - 100
+  - 120
+  - 50
 bow_layer_size: 400
 # latent z config
 user_z_type: 'cont' # cont| gumbel;
