--- a/config/vrnn.yaml
+++ b/config/vrnn.yaml
@@ -12,6 +12,7 @@ lr_decay_rate: 0.98
 bidirectional_encoder: true
 gumbel_softmax_tmp: 1.0
 teacher_forcing_prob: 0.5
+z_teacher_forcing_prob: 0.05
 number_z_vectors: 3
 with_bpr: false
 with_bow_loss: false
