--- a/config/vrnn.yaml
+++ b/config/vrnn.yaml
@@ -2,12 +2,13 @@
 data_type: 'raw'
 #data_dir: 'VRNN/data/camrest'
 #domain: 'camrest'
-data_dir: 'VRNN/data/SMD'
+data_dir: 'VRNN-generation/data/SMD'
 domain: 'smd'
 #data_dir: 'VRNN/data/woz-hotel'
 #domain: 'woz-hotel'
-embedding_fn: 'VRNN/data/embeddings/fasttext-wiki.vec'
+embedding_fn: 'VRNN-generation/data/embeddings/fasttext-wiki.vec'
 # general settings
+device_name: 'cuda:0'
 batch_size: 8
 drop_prob: 0.7
 lr_decay_rate: 0.98
@@ -16,12 +17,12 @@ teacher_forcing_prob: 0.5
 z_teacher_forcing_prob: 0.5
 kl_to_ce: 1
 user_number_z_vectors: 1
-system_number_z_vectors: 1
+system_number_z_vectors: 5
 begin_kl_opt_epoch: 3
 prior_module_recurrent: false
 gumbel_hard: false
 bidirectional_encoder: true
-use_copynet: false
+use_copynet: true
 use_attention: false
 with_bpr: false
 with_bow_loss: false
@@ -38,9 +39,9 @@ alpha_coeff_step: 0.5
 default_lambda_loss: 1.0
 # layer sizes
 input_encoder_hidden_size: 200
-user_decoder_hidden_size: 200
-system_decoder_hidden_size: 250
-vrnn_hidden_size: 250
+user_decoder_hidden_size: 250
+system_decoder_hidden_size: 300
+vrnn_hidden_size: 300
 posterior_ff_sizes1:
   - 200
 #  - 200
