--- a/config/vrnn.yaml
+++ b/config/vrnn.yaml
@@ -1,16 +1,16 @@
 # data settings
 data_type: 'raw'
-data_dir: 'VRNN/data/camrest'
+data_dir: 'VRNN-generation/data/camrest'
 domain: 'camrest'
 #data_dir: 'VRNN/data/SMD'
 #domain: 'smd'
 #data_dir: 'VRNN/data/woz-hotel'
 #domain: 'woz-hotel'
-embedding_fn: 'VRNN/data/embeddings/fasttext-wiki.vec'
+embedding_fn: 'VRNN-generation/data/embeddings/fasttext-wiki.vec'
 # general settings
-device_name: 'cpu:0'
+device_name: 'cuda:0' # cpu|cuda
 batch_size: 8
-drop_prob: 0.7
+drop_prob: 0.75
 lr_decay_rate: 0.98
 init_gumbel_softmax_tmp: 2.0
 gumbel_softmax_tmp: 2.0
@@ -18,7 +18,7 @@ teacher_forcing_prob: 0.5
 z_teacher_forcing_prob: 0.5
 kl_to_ce: 1
 user_number_z_vectors: 1
-system_number_z_vectors: 5
+system_number_z_vectors: 3
 begin_kl_opt_epoch: 3
 prior_module_recurrent: false
 gumbel_hard: false
@@ -41,7 +41,7 @@ default_lambda_loss: 1.0
 # layer sizes
 input_encoder_hidden_size: 200
 user_decoder_hidden_size: 250
-system_decoder_hidden_size: 300
+system_decoder_hidden_size: 200
 vrnn_hidden_size: 300
 posterior_ff_sizes1:
   - 200
