--- a/config/vrnn.yaml
+++ b/config/vrnn.yaml
@@ -1,14 +1,15 @@
 # data settings
 data_type: 'raw'
-data_dir: 'VRNN-generation/data/camrest'
-domain: 'camrest'
-#data_dir: 'VRNN/data/SMD'
-#domain: 'smd'
+#data_dir: 'VRNN-generation/data/camrest'
+#domain: 'camrest'
+data_dir: 'VRNN/data/SMD'
+domain: 'smd'
 #data_dir: 'VRNN/data/woz-hotel'
 #domain: 'woz-hotel'
-embedding_fn: 'VRNN-generation/data/embeddings/fasttext-wiki.vec'
+embedding_fn: 'VRNN/data/embeddings/fasttext-wiki.vec'
+embedding_out_fn: 'VRNN/data/embeddings/fasttext-wiki.pkl'
 # general settings
-device_name: 'cuda:0' # cpu|cuda
+device_name: 'cpu:0' # cpu|cuda
 batch_size: 8
 drop_prob: 0.75
 lr_decay_rate: 0.98
