--- a/config/vrnn.yaml
+++ b/config/vrnn.yaml
@@ -2,14 +2,14 @@
 data_type: 'raw'
 #data_dir: 'VRNN-generation/data/camrest'
 #domain: 'camrest'
-data_dir: 'VRNN/data/SMD'
+data_dir: 'VRNN-generation/data/smd'
 domain: 'smd'
 #data_dir: 'VRNN/data/woz-hotel'
 #domain: 'woz-hotel'
-embedding_fn: 'VRNN/data/embeddings/fasttext-wiki.vec'
-embedding_out_fn: 'VRNN/data/embeddings/fasttext-wiki.pkl'
+embedding_fn: 'VRNN-generation/data/embeddings/fasttext-wiki.vec'
+embedding_out_fn: 'VRNN-generation/data/embeddings/fasttext-wiki.pkl'
 # general settings
-device_name: 'cpu:0' # cpu|cuda
+device_name: 'cuda:0' # cpu|cuda
 batch_size: 8
 drop_prob: 0.75
 lr_decay_rate: 0.98
@@ -24,8 +24,8 @@ begin_kl_opt_epoch: 3
 prior_module_recurrent: false
 gumbel_hard: false
 bidirectional_encoder: true
-use_copynet: true
-use_attention: true
+use_copynet: false
+use_attention: false
 with_bpr: false
 with_bow_loss: false
 fake_prior: false
