--- a/config/vrnn.yaml
+++ b/config/vrnn.yaml
@@ -1,15 +1,16 @@
 # data settings
 data_type: 'raw'
-#data_dir: 'VRNN-generation/data/camrest'
-#domain: 'camrest'
+data_dir: 'VRNN-generation/data/camrest'
+domain: 'camrest'
 #data_dir: 'VRNN-generation/data/smd'
 #domain: 'smd'
-data_dir: 'VRNN-generation/data/multiwoz'
-domain: 'woz-hotel'
+#data_dir: 'VRNN-generation/data/multiwoz'
+#domain: 'woz-hotel'
 embedding_fn: 'VRNN-generation/data/embeddings/fasttext-wiki.vec'
 embedding_out_fn: 'VRNN-generation/data/embeddings/fasttext-wiki.pkl'
 # general settings
 device_name: 'cuda:0' # cpu|cuda
+activation: 'tanh'
 batch_size: 4
 drop_prob: 0.75
 lr_decay_rate: 0.98
@@ -29,7 +30,7 @@ use_attention: false
 with_bpr: false
 with_bow_loss: false
 fake_prior: false
-min_epochs: 30
+min_epochs: 80
 max_epochs: 100
 db_cutoff: 3
 copy_start_epoch: 10
