update wandb logging

--- a/config/vrnn.yaml
+++ b/config/vrnn.yaml
@@ -25,8 +25,8 @@ begin_kl_opt_epoch: 3
 prior_module_recurrent: false
 gumbel_hard: false
 bidirectional_encoder: true
-use_copynet: false
-use_attention: false
+use_copynet: true
+use_attention: true
 with_bpr: false
 with_bow_loss: false
 fake_prior: false
