--- a/config/vrnn.yaml
+++ b/config/vrnn.yaml
@@ -28,10 +28,10 @@ stop_opt_z: 20
 prior_module_recurrent: false
 gumbel_hard: false
 bidirectional_encoder: true
-#use_copynet: true
-#use_attention: true
-use_copynet: false
-use_attention: false
+use_copynet: true
+use_attention: true
+#use_copynet: false
+#use_attention: false
 with_bpr: false
 with_bow_loss: false
 fake_prior: false
