--- a/config/vrnn.yaml
+++ b/config/vrnn.yaml
@@ -1,11 +1,11 @@
 # data settings
 data_type: 'raw'
-data_dir: 'VRNN-generation/data/camrest'
-domain: 'camrest'
+#data_dir: 'VRNN-generation/data/camrest'
+#domain: 'camrest'
 #data_dir: 'VRNN-generation/data/smd'
 #domain: 'smd'
-#data_dir: 'VRNN-generation/data/multiwoz'
-#domain: 'woz-hotel'
+data_dir: 'VRNN-generation/data/multiwoz'
+domain: 'woz-hotel'
 embedding_fn: 'VRNN-generation/data/embeddings/fasttext-wiki.vec'
 embedding_out_fn: 'VRNN-generation/data/embeddings/fasttext-wiki.pkl'
 # general settings
@@ -22,16 +22,16 @@ teacher_forcing_prob: 0.3
 z_teacher_forcing_prob: 0.3
 kl_to_ce: 1
 user_number_z_vectors: 1
-system_number_z_vectors: 3
+system_number_z_vectors: 1
 begin_kl_opt_epoch: 1
 stop_opt_z: 20
 prior_module_recurrent: false
 gumbel_hard: false
 bidirectional_encoder: true
-use_copynet: true
-use_attention: true
-#use_copynet: false
-#use_attention: false
+#use_copynet: true
+#use_attention: true
+use_copynet: false
+use_attention: false
 with_bpr: false
 with_bow_loss: false
 fake_prior: false
