--- a/config/vrnn.yaml
+++ b/config/vrnn.yaml
@@ -1,9 +1,9 @@
 # data settings
 data_type: 'raw'
-#data_dir: 'VRNN-generation/data/camrest'
-#domain: 'camrest'
-data_dir: 'VRNN-generation/data/smd'
-domain: 'smd'
+data_dir: 'VRNN-generation/data/camrest'
+domain: 'camrest'
+#data_dir: 'VRNN-generation/data/smd'
+#domain: 'smd'
 #data_dir: 'VRNN-generation/data/multiwoz'
 #domain: 'woz-hotel'
 embedding_fn: 'VRNN-generation/data/embeddings/fasttext-fake.vec'
@@ -11,7 +11,7 @@ embedding_out_fn: 'VRNN-generation/data/embeddings/fasttext-wiki.pkl'
 # general settings
 max_allowed_turn_len: 20
 delex: true
-device_name: 'cpu:0' # cpu|cuda
+device_name: 'cuda:0' # cpu|cuda
 activation: 'tanh'
 batch_size: 4
 drop_prob: 0.3
