--- a/config/vrnn.yaml
+++ b/config/vrnn.yaml
@@ -10,10 +10,11 @@ embedding_fn: 'VRNN-generation/data/embeddings/fasttext-fake.vec'
 embedding_out_fn: 'VRNN-generation/data/embeddings/fasttext-wiki.pkl'
 # general settings
 max_allowed_turn_len: 20
-delex: true
-device_name: 'cuda:0' # cpu|cuda
+delex: false
+device_name: 'cpu:0' # cpu|cuda
 activation: 'tanh'
 batch_size: 4
+quantization: 0.01
 drop_prob: 0.3
 lr_decay_rate: 0.98
 init_gumbel_softmax_tmp: 2.0
