--- a/config/vrnn.yaml
+++ b/config/vrnn.yaml
@@ -13,8 +13,8 @@ db_file: 'VRNN-generation/data/camrest/db.json'
 embedding_fn: 'VRNN-generation/data/embeddings/fasttext-wiki.vec'
 embedding_out_fn: 'VRNN-generation/data/embeddings/fasttext-wiki.pkl'
 # general settings
-max_allowed_turn_len: 30
-delex: false
+max_allowed_turn_len: 20
+delex: true
 device_name: 'cpu:0' # cpu|cuda
 activation: 'tanh'
 batch_size: 4
@@ -33,15 +33,15 @@ stop_opt_z: 20
 prior_module_recurrent: false
 gumbel_hard: false
 bidirectional_encoder: true
-use_db_api: true
-use_copynet: true
+use_db_api: false
+use_copynet: false
 use_attention: true
 #use_copynet: false
 #use_attention: false
 with_bpr: false
 with_bow_loss: false
-fake_prior: true
-min_epochs: 40
+fake_prior: false
+min_epochs: 80
 max_epochs: 100
 db_cutoff: 3
 copy_start_epoch: 5
