--- a/config/vrnn.yaml
+++ b/config/vrnn.yaml
@@ -1,6 +1,6 @@
 # data settings
 data_type: 'raw'
-data_dir: 'VRNN-generation/data/camrest'
+data_dir: 'VRNN/data/camrest'
 domain: 'camrest'
 #data_dir: 'VRNN-generation/data/smd'
 #domain: 'smd'
@@ -9,9 +9,9 @@ domain: 'camrest'
 #data_dir: 'VRNN-generation/data/daily'
 #domain: 'daily'
 #db_file: 'VRNN-generation/data/multiwoz/db.json'
-db_file: 'VRNN-generation/data/camrest/db.json'
-embedding_fn: 'VRNN-generation/data/embeddings/fasttext-wiki.vec'
-embedding_out_fn: 'VRNN-generation/data/embeddings/fasttext-wiki.pkl'
+db_file: 'VRNN/data/camrest/db.json'
+embedding_fn: 'VRNN/data/embeddings/fasttext-wiki.vec'
+embedding_out_fn: 'VRNN/data/embeddings/fasttext-wiki.pkl'
 # general settings
 max_allowed_turn_len: 20
 delex: true
