--- a/config/vrnn.yaml
+++ b/config/vrnn.yaml
@@ -33,8 +33,8 @@ prior_module_recurrent: false
 gumbel_hard: false
 bidirectional_encoder: true
 use_db_api: false
-use_copynet: true
-use_attention: true
+use_copynet: false
+use_attention: false
 #use_copynet: false
 #use_attention: false
 with_bpr: false
