added dialogue success evaluator

--- a/config/vrnn.yaml
+++ b/config/vrnn.yaml
@@ -26,17 +26,17 @@ teacher_forcing_prob: 0.3
 z_teacher_forcing_prob: 0.3
 kl_to_ce: 1
 user_number_z_vectors: 1
-system_number_z_vectors: 3
+system_number_z_vectors: 5
 begin_kl_opt_epoch: 1
 stop_opt_z: 20
 prior_module_recurrent: false
 gumbel_hard: false
 bidirectional_encoder: true
-use_db_api: true
-#use_copynet: true
-#use_attention: true
-use_copynet: false
-use_attention: false
+use_db_api: false
+use_copynet: true
+use_attention: true
+#use_copynet: false
+#use_attention: false
 with_bpr: false
 with_bow_loss: false
 fake_prior: false
